fix: update the max-height of the task-overlay and fixed the overflows

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,4 +1,11 @@
 @use 'index' as *;
+*{
+    word-wrap: break-word;
+    word-break: break-word;
+    overflow-wrap: break-word;
+    hyphens: auto;
+    max-width: 100%;
+}
 .wrapper {
   display:flex;
   flex-wrap: wrap;
