--- a/src/app/board/manage-task/manage-task.scss
+++ b/src/app/board/manage-task/manage-task.scss
@@ -53,10 +53,6 @@ h4{
 
 .task-title {
   h4 {
-    word-wrap: break-word;
-    word-break: break-word;
-    overflow-wrap: break-word;
-    hyphens: auto;
     max-width: 100%;
     line-height: 1.4;
     margin: 0;
@@ -65,9 +61,9 @@ h4{
 
 .description{
   color:$color-gray;
-  word-wrap: break-word;
+/*   word-wrap: break-word;
   word-break: break-word;
-  overflow-wrap: break-word;
+  overflow-wrap: break-word; */
   line-height: 1.4;
 }
 .subtask-progress{
