--- a/src/app/board/task-overlay/task-overlay.scss
+++ b/src/app/board/task-overlay/task-overlay.scss
@@ -425,12 +425,7 @@ select:-moz-focusring {
     .contact-item-display {
       display: flex;
       align-items: center;
-      gap: 8px;
-      padding: 6px 12px;
-      background-color: #f8f9fa;
-      border-radius: 20px;
-      border: 1px solid #e9ecef;
-      
+      gap: 3px;
       .circle {
         width: 32px;
         height: 32px;
