--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -38,5 +38,8 @@ h2, h3, h4{
 }
 h3{
   color:$color-primary;
+  @media (width < 620px){
+    font-size: var(--font-size-lg);
+  }
 }
 
