--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -3,6 +3,7 @@
 @use 'spacing' as *;
 @use 'typography' as *;
 @use 'mixins' as *;
+@use 'components' as *;
 
 // Flexbox utilities
 .flex {
@@ -186,7 +187,6 @@
 
 .add-task-container {
   width: 100%;
-  height: 80svh;
   margin: 0;
   border-radius: $spacing-sm;
   display: flex;
@@ -202,7 +202,9 @@
 }
 
 .card-wrapper {
-  max-width: 85svw;
+  max-width: 90svw;
+    max-height: 99svh;
+    overflow-y: auto;
 }
 
 .justify-start {
@@ -211,14 +213,17 @@
 
 .big-card {
   max-width: 37.5rem;
-  padding: $spacing-5xl;
   justify-content: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
   overflow: auto;
+  box-shadow: $card-shadow;
+  background: $color-bg-card;
+  gap: $spacing-sm;
+  margin:$spacing-sm 0;
+  border-radius:$spacing-xl;
   @media(width < 860px){
-    height: 60svh;
     width: 85svw;
   }
 
